<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/radioSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/small_6_8" />
        <RadioButton
            android:id="@+id/radioNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal_8_10" />
        <RadioButton
            android:id="@+id/radioBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/big_10_12" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/halfLineCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGroup"
        android:text="@string/half_line" />
</LinearLayout>