<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="200dp"
                android:text="@string/very_easy"
                android:id="@+id/veryEasyBtn" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="200dp"
                android:text="@string/easy"
                android:id="@+id/easyBtn" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="200dp"
                android:text="@string/normal"
                android:id="@+id/normalBtn" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="200dp"
                android:text="@string/advanced"
                android:id="@+id/advancedBtn" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="200dp"
                android:text="@string/hard"
                android:id="@+id/hardBtn" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="200dp"
                android:text="@string/experimental"
                android:id="@+id/experimentalBtn" />

        </TableRow>
    </TableLayout>
</ScrollView>