<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/benchmark"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/benchmark_description"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/statisticsTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/benchmark_statistics"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"/>

        <Button
            android:id="@+id/startStopBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Start benchmark"
            android:minWidth="200dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</ScrollView>